fix: HikariCP pool, JWT interceptor, PWA install, teclado numérico, safe areas
- Backend: HikariCP pool optimizado (20 max, 5 min idle, leak detection)
- Backend: Removido hibernate.dialect innecesario, deshabilitado open-in-view
- Frontend: Interceptor JWT mejorado (verifica expiración antes de enviar request)
- Frontend: PWA install prompt no aparece si ya está instalada
- Frontend: Safe areas CSS para PWA standalone mode
- Frontend: Teclado numérico por defecto en /asignaciones (búsqueda por CI)
- Frontend: Eliminado banner de meta 10 socios y notificaciones periódicas
- Frontend: Redirect /candidatos -> /candidatos-publico (acceso público)
- Frontend: Formato natural de nombres en compartir candidatos